--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/tablesorter.css" />
+	<link rel="stylesheet" type="text/css" href="css/tablesorter-min.css" />
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.tablesorter.js"></script>
+	<script src="js/jquery.tablesorter-min.js"></script>
 	<title>Table Sorter</title>
 </head>
 <body>
